fix MemoCard Overflow

--- a/front/video-memo-front/src/App.css
+++ b/front/video-memo-front/src/App.css
@@ -30,6 +30,7 @@
 
 .memoCard {
   border: 1px solid aqua;
+  overflow-x: scroll;
 }
 
 .seekBtn {
